# CriCodecs

./: .gitattributes  CMakeLists.txt  README.md  USAGE.md  cricodecs_library.cmake  pyproject.toml
.github/manylinux-gcc16/: Dockerfile
.github/workflows/: ci.yml  release.yml
CriCodecs/cmake/: CriCodecsConfig.cmake.in
CriStudio/: CMakeLists.txt
CriStudio/packaging/linux/: io.github.Youjose.CriStudio.desktop
CriStudio/packaging/macos/: CriStudio.icns
CriStudio/packaging/windows/: cristudio.rc.in  cristudio_launcher.cpp
CriStudio/src/: document_loader.cpp  document_loader.hpp  editor_workspace.cpp  editor_workspace.hpp  entry_table_model.cpp  entry_table_model.hpp  file_list_model.cpp  file_list_model.hpp  format_icon.cpp  format_icon.hpp  main.cpp  main_window.cpp  main_window.hpp  path_text.hpp
CriStudio/src/browser/: browser_delegates.cpp  browser_delegates.hpp
CriStudio/src/document/: document_types.hpp
CriStudio/src/editor/: archive_editor_helpers.cpp  archive_editor_helpers.hpp  editor_document_ui.cpp  editor_document_ui.hpp  editor_document_widget.cpp  editor_document_widget.hpp  editor_helpers.cpp  editor_helpers.hpp  editor_session_loaders.cpp  editor_session_loaders.hpp  editor_widgets.cpp  editor_widgets.hpp  hex_patterns.cpp  hex_patterns.hpp  hex_preview_widget.cpp  hex_preview_widget.hpp  scratch_editor_session.cpp  scratch_editor_session.hpp  table_item_helpers.cpp  table_item_helpers.hpp  transform_detail_model.cpp  transform_detail_model.hpp  transform_editor_helpers.cpp  transform_editor_helpers.hpp
CriStudio/src/editor/hex_patterns/: aax_patterns.cpp  acx_patterns.cpp  adx_patterns.cpp  afs_patterns.cpp  aix_patterns.cpp  awb_patterns.cpp  common_patterns.cpp  cpk_patterns.cpp  cvm_patterns.cpp  hca_patterns.cpp  hex_patterns_internal.hpp  sfd_patterns.cpp  usm_patterns.cpp  utf_patterns.cpp  wav_patterns.cpp
CriStudio/src/main_window/: aac_key_recovery.cpp  adx_key_recovery.cpp  background.cpp  browser_view.cpp  chrome.cpp  editor_actions.cpp  events.cpp  hca_key_recovery.cpp  key_panel.cpp  key_panel.hpp  preview_audio.cpp  preview_helpers.cpp  preview_helpers.hpp  preview_mux.cpp  preview_mux.hpp  preview_panel.cpp  preview_video.cpp  ui_helpers.cpp  ui_helpers.hpp  usm_key_recovery.cpp
CriStudio/src/modules/: transform_detail.hpp  ui_value_helpers.hpp
CriStudio/src/modules/aax/: aax_browse.cpp  aax_browse.hpp  aax_edit.cpp  aax_edit.hpp  aax_preview.cpp  aax_preview.hpp
CriStudio/src/modules/acb/: acb_browse.cpp  acb_browse.hpp  acb_edit.cpp  acb_edit.hpp  acb_edit_ui.cpp  acb_edit_ui.hpp
CriStudio/src/modules/acx/: acx_browse.cpp  acx_browse.hpp  acx_edit.cpp  acx_edit.hpp  acx_edit_ui.cpp  acx_edit_ui.hpp
CriStudio/src/modules/adx/: adx_browse.cpp  adx_browse.hpp  adx_common.cpp  adx_common.hpp  adx_container_build_ui.cpp  adx_container_build_ui.hpp  adx_edit.cpp  adx_edit.hpp  adx_edit_ui.cpp  adx_edit_ui.hpp  adx_preview.cpp  adx_preview.hpp
CriStudio/src/modules/afs/: afs_browse.cpp  afs_browse.hpp  afs_edit.cpp  afs_edit.hpp  afs_edit_ui.cpp  afs_edit_ui.hpp
CriStudio/src/modules/aix/: aix_browse.cpp  aix_browse.hpp  aix_edit.cpp  aix_edit.hpp
CriStudio/src/modules/audio/: audio_encode.cpp  audio_encode.hpp  audio_encode_ui.cpp  audio_encode_ui.hpp
CriStudio/src/modules/awb/: awb_browse.cpp  awb_browse.hpp  awb_edit.cpp  awb_edit.hpp  awb_edit_ui.cpp  awb_edit_ui.hpp
CriStudio/src/modules/cpk/: cpk_browse.cpp  cpk_browse.hpp  cpk_edit.cpp  cpk_edit.hpp  cpk_edit_ui.cpp  cpk_edit_ui.hpp
CriStudio/src/modules/csb/: csb_browse.cpp  csb_browse.hpp  csb_edit.cpp  csb_edit.hpp  csb_edit_ui.cpp  csb_edit_ui.hpp
CriStudio/src/modules/cvm/: cvm_browse.cpp  cvm_browse.hpp  cvm_edit.cpp  cvm_edit.hpp  cvm_edit_ui.cpp  cvm_edit_ui.hpp
CriStudio/src/modules/hca/: hca_browse.cpp  hca_browse.hpp  hca_common.cpp  hca_common.hpp  hca_edit.cpp  hca_edit.hpp  hca_edit_ui.cpp  hca_edit_ui.hpp  hca_preview.cpp  hca_preview.hpp
CriStudio/src/modules/sfd/: sfd_browse.cpp  sfd_browse.hpp  sfd_edit.cpp  sfd_edit.hpp
CriStudio/src/modules/usm/: media_build.cpp  media_build.hpp  media_build_ui.cpp  media_build_ui.hpp  media_build_validation.cpp  media_build_validation.hpp  usm_browse.cpp  usm_browse.hpp  usm_edit.cpp  usm_edit.hpp  usm_extract.cpp  usm_extract.hpp
CriStudio/src/modules/utf/: utf_browse.cpp  utf_browse.hpp  utf_common.cpp  utf_common.hpp  utf_edit.cpp  utf_edit.hpp  utf_edit_ui.cpp  utf_edit_ui.hpp
CriStudio/src/modules/wav/: wav_browse.cpp  wav_browse.hpp  wav_preview.cpp  wav_preview.hpp
CriStudio/src/shared/: aac_key_recovery.cpp  aac_key_recovery.hpp  adx_key_recovery.cpp  adx_key_recovery.hpp  audio_preview_helpers.cpp  audio_preview_helpers.hpp  document_extract_helpers.cpp  document_extract_helpers.hpp  document_extraction_report.cpp  document_extraction_report.hpp  document_helpers.cpp  document_helpers.hpp  document_preview_router.cpp  document_preview_router.hpp  document_sniffer.cpp  document_sniffer.hpp  embedded_document_loader.cpp  embedded_document_loader.hpp  embedded_entry_extractor.cpp  embedded_entry_extractor.hpp  embedded_preview_helpers.cpp  embedded_preview_helpers.hpp  ffmpeg_audio_preview.cpp  ffmpeg_audio_preview.hpp  hca_key_recovery.cpp  hca_key_recovery.hpp  mux_export_helpers.cpp  mux_export_helpers.hpp  raw_extract_helpers.cpp  raw_extract_helpers.hpp  usm_key_recovery.cpp  usm_key_recovery.hpp  video_probe.cpp  video_probe.hpp
PyCriCodecs/: CMakeLists.txt  build_wheel_core.py  usm.py
PyCriCodecs/package/cricodecs/: __init__.pyi  aax.pyi  acb.pyi  acx.pyi  adx.pyi  afs.pyi  ahx.pyi  aix.pyi  awb.pyi  cpk.pyi  csb.pyi  cvm.pyi  hca.pyi  sfd.pyi  usm.pyi  utf.pyi  video.pyi  wav.pyi
PyCriCodecs/src/: aax_bindings.cpp  acb_bindings.cpp  acx_bindings.cpp  adx_bindings.cpp  adx_recovery_bindings.hpp  afs_bindings.cpp  ahx_bindings.cpp  aix_bindings.cpp  awb_bindings.cpp  binding_helpers.hpp  cpk_bindings.cpp  csb_bindings.cpp  cvm_bindings.cpp  hca_bindings.cpp  module.cpp  sfd_bindings.cpp  usm_bindings.cpp  utf_bindings.cpp  video_bindings.cpp  wav_bindings.cpp
(+147 files in other folders)
